<resources>
    <string name="app_name">Artiko Levantamiento</string>

    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">Inicio</string>
    <string name="splash_activity_main">Splash</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Por favor ingrese su usuario</string>
    <string name="invalid_password">La contraseña debe ser mayor a 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>

    <!-- String Login -->
    <string name="login_user">"Usuario"</string>
    <string name="login_pass">"Contraseña"</string>
    <string name="login_button">"Ingresar"</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings SCR Activities -->
    <string name="scr_todo">Por hacer</string>
    <string name="scr_executed">Ejecutadas</string>
    <string name="scr_failed">Fallidas</string>

    <!-- Strings Map -->
    <string name="map_activities">Actividades</string>
    <string name="map_sub_activities">Subactividades</string>
    <string name="map_state">Estado</string>
    <string name="map_organize_route">Organizar ruta</string>
    <string name="map_search">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="itemSpinner">
        <item>tipo1</item>
        <item>tipo2</item>
        <item>tipo3</item>
    </string-array>
</resources>