<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Fragments.Map.MapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="13dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.artikolevyinf.TextViews.TextView_blue_12
                android:id="@+id/textView_blue_129"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:maxWidth="200dp"
                android:text="Mapa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.example.artikolevyinf.TextViews.TextView_green_10
                android:id="@+id/underlineText_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                android:text="Ver filtros aplicados"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_to_be_checked_map_infrastructure"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="start"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"

                android:background="@drawable/button_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/map_activities"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_checked_map_infrastructure"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="start"
                android:layout_marginVertical="15dp"
                android:background="@drawable/button_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"

                android:text="@string/map_sub_activities"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintEnd_toStartOf="@+id/btn_all_map_infrastructure"
                app:layout_constraintStart_toEndOf="@+id/btn_to_be_checked_map_infrastructure"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_all_map_infrastructure"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="start"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                android:background="@drawable/button_blue"

                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/map_state"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.artikolevyinf.TextViews.TextView_blue_9
                android:id="@+id/tv_filter_apply_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Filtros aplicados:"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_to_be_checked_map_infrastructure" />

            <com.example.artikolevyinf.TextViews.TextView_blueDark_9
                android:id="@+id/tv_filter_apply"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_filter_apply_title"
                app:layout_constraintTop_toBottomOf="@+id/btn_to_be_checked_map_infrastructure" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:context=".MapsActivity" />

            <Button
                android:id="@+id/btn_search_map_scr"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_map"
                android:drawableLeft="@drawable/ic_zoom"
                android:paddingLeft="10dp"
                android:drawableTint="#666666"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_search_map"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                app:queryBackground="@color/colorWhite"
                android:background="@drawable/input_general"
                android:elevation="10dp"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_search_map_scr"
                app:layout_constraintTop_toTopOf="parent"
                app:queryHint="@string/map_search"
                app:searchIcon="@null" />

            <Button
                android:id="@+id/btn_organice_route_map"
                android:layout_width="@dimen/button_activities_with"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="start"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_blue"
                android:text="@string/map_organize_route"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</FrameLayout>