<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ActivityFragment"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/activity_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="13dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="37dp"
            android:layout_marginBottom="10dp">

            <com.example.artikolevyinf.TextViews.TextView_blue_12
                android:id="@+id/generalActivity"
                android:layout_width="wrap_content"
                android:maxWidth="170dp"
                android:layout_height="wrap_content"
                android:text="Actividad"
                android:textColor="@color/colorBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="12dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <Button
                android:id="@+id/btn_todo_general_activities"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="start"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"

                android:background="@drawable/button_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/scr_todo"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_executed_general_activities"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="start"
                android:layout_marginVertical="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/unselected_button"
                android:elevation="10dp"
                android:stateListAnimator="@null"

                android:text="@string/scr_executed"
                android:textAllCaps="false"
                android:textColor="@color/colorBlueDark"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_failed_general_activities"
                app:layout_constraintStart_toEndOf="@+id/btn_todo_general_activities" />

            <Button
                android:id="@+id/btn_failed_general_activities"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="start"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/unselected_button"

                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/scr_failed"
                android:textAllCaps="false"
                android:textColor="@color/colorBlueDark"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_general_activities"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_cards_scr_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>

            <com.example.artikolevyinf.TextViews.TextView_blue_12
                android:id="@+id/tvEmptyActivity_general_activities"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="En este momento no tienes\nactividades."
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>